Fix issue with extra scroll on mobile

--- a/src/css/00_base/base.scss
+++ b/src/css/00_base/base.scss
@@ -1,14 +1,20 @@
 @import 'variables';
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 1.4;
+}
+
 html,
 body {
   background: $colorBackground;
   color: $colorText;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  line-height: 1.4;
+html,
+body,
+#__next {
+  height: 100%;
 }
 
 a {
@@ -32,6 +38,7 @@ p {
 }
 
 hr {
+  border-color: var(--dominantColorLight, #{$dominantColorLight});
   color: var(--dominantColorLight, #{$dominantColorLight});
 }
 
